--- a/frontend/apps/extension/manifest.json
+++ b/frontend/apps/extension/manifest.json
@@ -11,8 +11,8 @@
     "js": ["content.js"],
     "run_at": "document_idle"
   }],
-  "permissions": ["storage", "declarativeContent", "tabs", "activeTab"],
-  "host_permissions": [],
+  "permissions": ["storage", "declarativeContent", "tabs", "activeTab", "userScripts"],
+  "host_permissions": ["<all_urls>"],
   "web_accessible_resources": [{
     "resources": ["/images/*.png"],
     "matches": ["<all_urls>"]
