--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
     "copy-to-clipboard": "^3.3.3",
+    "glob": "^10.3.10",
     "lodash-es": "^4.17.21",
     "pdfjs-dist": "3.4.120",
     "query-string": "^8.1.0",
@@ -116,6 +117,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-unicorn": "^48.0.1",
     "express": "^4.18.2",
+    "filemanager-webpack-plugin": "^8.0.0",
     "fork-ts-checker-webpack-plugin": "7.2.13",
     "http-proxy-middleware": "^2.0.6",
     "jest": "^29.4.1",
