fix: 调整文件结构兼容篡改猴格式

--- a/frontend/apps/extension/tsconfig.app.json
+++ b/frontend/apps/extension/tsconfig.app.json
@@ -26,5 +26,8 @@
     "background/**/*.tsx",
     "../../types/**/*.d.ts",
     "plugins/**/*.ts",
+    "plugins/**/*.js",
+    "init-plugins/**/*.ts",
+    "init-plugins/**/*.js",
   ]
 }
